Added more compiled dependencies for ubi8 image.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,7 +40,7 @@ APP_GENERIC_NAME: Simulation of Urban Mobility
 APP_COMMENT: Simulation of Urban Mobility
 APP_USER: "{{ lookup('env', 'USER') }}"
 APP_GROUP: "{{ APP_USER }}"
-APP_PREFIX: "/home/{{ APP_USER }}/.local"
+APP_PREFIX: "{{ lookup('env', 'HOME') }}/.local"
 APP_ROOT: "{{ false if APP_PREFIX is regex('^/home') else true }}"
 APP_SRC: "{{ APP_PREFIX }}/src/{{ APP_NAME  }}"
 APP_SHARE: "{{ APP_PREFIX }}/share/{{ APP_NAME  }}"
