--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -44,13 +44,13 @@ APP_PREFIX: "{{ lookup('env', 'HOME') }}/.local"
 APP_ROOT: "{{ false if APP_PREFIX is regex('^/home') else true }}"
 APP_SRC: "{{ APP_PREFIX }}/src/{{ APP_NAME  }}"
 APP_SHARE: "{{ APP_PREFIX }}/share/{{ APP_NAME  }}"
-APP_REPO_SSH: git@github.com:eclipse/sumo.git
+APP_REPO_SSH: git@github.com:computate-org/sumo.git
 APP_REPO_HTTPS: "{{ APP_REPO_SSH | replace('git@github.com:', 'https://github.com/') }}"
-APP_TAG: v1_12_0
+APP_TAG: main
 APP_DESKTOP: "{{ APP_PREFIX }}/share/applications/{{ APP_NAME }}.desktop"
 APP_README: "{{ APP_SRC }}/README.md"
 APP_ICON: "{{ APP_SHARE }}/data/logo/sumo-128x138.png"
-APP_EXEC: "env LD_LIBRARY_PATH={{ APP_PREFIX }}/lib {{ APP_PREFIX }}/bin/sumo-gui"
+APP_EXEC: "env LD_LIBRARY_PATH={{ APP_PREFIX }}/lib SUMO_HOME={{ APP_PREFIX }}/share/{{ APP_NAME  }} {{ APP_PREFIX }}/bin/sumo-gui"
 APP_KEYWORDS: "simulator;traffic;"
 APP_CATEGORIES: "Utility;Accessibility;"
 MAKE_CORES: "{{ ansible_processor_vcpus | default(1) }}"
