--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,7 +46,7 @@ APP_SRC: "{{ APP_PREFIX }}/src/{{ APP_NAME  }}"
 APP_SHARE: "{{ APP_PREFIX }}/share/{{ APP_NAME  }}"
 APP_REPO_SSH: git@github.com:computate-org/sumo.git
 APP_REPO_HTTPS: "{{ APP_REPO_SSH | replace('git@github.com:', 'https://github.com/') }}"
-APP_TAG: v1_12_0
+APP_TAG: computate-json-output
 APP_DESKTOP: "{{ APP_PREFIX }}/share/applications/{{ APP_NAME }}.desktop"
 APP_README: "{{ APP_SRC }}/README.md"
 APP_ICON: "{{ APP_SHARE }}/data/logo/sumo-128x138.png"
